Added Web3 initialization

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 django-ninja = "web3"
 django-debug-toolbar = "^3.6.0"
 django-grappelli = "^3.0.3"
+web3 = "^5.31.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
