--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django-ninja = "web3"
 django-debug-toolbar = "^3.6.0"
 django-grappelli = "^3.0.3"
 web3 = "^5.31.1"
+eth-tester = "0.6.0-beta.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
