--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
       with:
         python-version: '3.9'
     - name: Install deps
-      uses: knowsuchagency/poetry-install@v2
+      uses: snok/install-poetry@v1
       env:
         POETRY_VIRTUALENVS_CREATE: false
     - name: Run black check
@@ -26,7 +26,7 @@ jobs:
       with:
         python-version: '3.9'
     - name: Install deps
-      uses: knowsuchagency/poetry-install@v1
+      uses: snok/install-poetry@v1
       env:
         POETRY_VIRTUALENVS_CREATE: false
     - name: Run flake8 check
@@ -40,7 +40,7 @@ jobs:
       with:
         python-version: '3.9'
     - name: Install deps
-      uses: knowsuchagency/poetry-install@v1
+      uses: snok/install-poetry@v1
       env:
         POETRY_VIRTUALENVS_CREATE: false
     - name: Run mypy check
@@ -54,7 +54,7 @@ jobs:
       with:
         python-version: '3.9'
     - name: Install deps
-      uses: knowsuchagency/poetry-install@v1
+      uses: snok/install-poetry@v1
       env:
         POETRY_VIRTUALENVS_CREATE: false
     - name: Run pytest check
