fixed github actions

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,6 +15,7 @@ jobs:
       uses: snok/install-poetry@v1
       env:
         POETRY_VIRTUALENVS_CREATE: false
+      run: poetry install --no-interaction
     - name: Run black check
       run: poetry run black --check .
   flake8:
@@ -29,6 +30,7 @@ jobs:
       uses: snok/install-poetry@v1
       env:
         POETRY_VIRTUALENVS_CREATE: false
+      run: poetry install --no-interaction
     - name: Run flake8 check
       run: poetry run flake8 --count .
   mypy:
@@ -43,6 +45,7 @@ jobs:
       uses: snok/install-poetry@v1
       env:
         POETRY_VIRTUALENVS_CREATE: false
+      run: poetry install --no-interaction
     - name: Run mypy check
       run: poetry run mypy .
   pytest:
@@ -57,6 +60,7 @@ jobs:
       uses: snok/install-poetry@v1
       env:
         POETRY_VIRTUALENVS_CREATE: false
+      run: poetry install --no-interaction
     - name: Run pytest check
       run: poetry run pytest -vv --cov="daph_api" .
       env:
