--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ flake8 = "^5.0.4"
 mypy = "^0.982"
 coverage = "^6.5.0"
 pytest-cov = "^4.0.0"
+factory-boy = "^3.2.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
